--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "twit": "^2.2.11",
+    "twitter-v2": "^1.0.7",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
